[package]
name = "cargo-certora-sbf"
version = "0.3.4"
authors = [ "Arie Gurfinkel <arie@certora.com>" ]
description = "Build a program for Certora Verification using Certora's version of Solana Platform Tools"
documentation = "https://docs.rs/cvlr/latest"
license = "Apache-2.0"
keywords = [
    "certora", 
    "assert", 
    "solana",
    "verification", 
    "formal-methods",
]
categories = [
    "development-tools::debugging", 
    "development-tools::testing", 
]
readme = "README.md"
homepage = "https://www.certora.com"
repository = "https://github.com/Certora/cargo-certora-sbf"
edition = "2021"

[dependencies]
bzip2 = "0.5.2"
cargo_metadata = "0.19.2" 
clap = { version = "4.5.35", features = ["cargo", "env", "derive"] }
clap-cargo = "0.15.2"
itertools = "0.14.0"
log = { version = "0.4.26", features = ["std"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls"] }
semver = "1.0.26" 
solana-file-download = "2.2.1"
tar = "0.4.44"
serde_json = "1"
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.8"
home = "0.5.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.3"
assert_fs = "1.1.2"

[features]
program = []

[[bin]]
name = "cargo-certora-sbf"
path = "src/main.rs"

[package.metadata.release]
pre-release-replacements = [
  {file="README.md", search="[*][*]Current release:[*][*] `[a-z0-9\\.-]+`", replace="**Current release:** `{{version}}`"} ,
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/Certora/cargo-certora-sbf/compare/{{tag_name}}...HEAD", exactly=1},
]
